--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -2,6 +2,6 @@ html { height: 100% }
 body { height: 100%; margin: 0; padding: 0 }
 
 #map-canvas {
-	height: 100%
-	
+	height: 50%;
+	width: 50%;	
 }
