--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -55,3 +55,20 @@ body {
     font-family: sans-serif;
     font-size: 12px;
 }
+
+#progress-bar {
+	width:500px;
+	background-color: #333;
+	position: relative;
+	height:10px;
+	top: 450px;
+	margin-left: auto ;
+  	margin-right: auto ;
+}
+
+#bar {
+	position: relative; 
+	height:10px; 
+	width:50%; 
+	background-color: #075;
+}
