--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -3,35 +3,51 @@ body {
 	height: 100%; 
 	margin: 0; 
 	padding: 0; 
-	background-color: #FF0000;
+	background-color: #444;
 }
 #container {
 	width: 1000px;
 	margin-left: auto;
 	margin-right: auto;
-	background-color: #0F0;
+	background-color: #EEE;
 	height: 100%;
 }
 
 #map-canvas {
 
-	height: 400px;
-	width: 600px;
-	background-color: #0000FF;
+	height: 500px;
+	width: 750px;
+	background-color: #EEE;
 	margin-top: 0px;
 	position: absolute;
 	z-index: 0;
-	top: 0px;
-	margin: 5px;
-	
+	top: 30px;
+	margin-left: 150px;
+	border-style: solid;
+	border-width: 1px;
 }
 
 #clearButton {
-	margin-top: 500px;
+	margin-top: 10px;
+	margin-bottom: 20px;
+	width: 120px;
+	height: 35px;
 	z-index: 100;
-	background-color: #0000FF;
+		
 	
-	
+}
+ol{
+	position: relative;
+	top: 20px;
+	right: 25px;
+	margin-top: 0px;
+	list-style-type:none;
+}
+
+#timeline{
+	position: relative;
+	top: 305px;
+	left: 145px;
 }
 
 #brush {
