--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -3,13 +3,13 @@ body {
 	height: 100%; 
 	margin: 0; 
 	padding: 0; 
-	background-color: #FF0000;
+	background-color: #444;
 }
 #container {
 	width: 1000px;
 	margin-left: auto;
 	margin-right: auto;
-	background-color: #0F0;
+	background-color: #EEE;
 	height: 100%;
 }
 
@@ -17,7 +17,6 @@ body {
 
 	height: 400px;
 	width: 600px;
-	background-color: #0000FF;
 	margin-top: 0px;
 	position: absolute;
 	z-index: 0;
@@ -29,9 +28,6 @@ body {
 #clearButton {
 	margin-top: 500px;
 	z-index: 100;
-	background-color: #0000FF;
-	
-	
 }
 
 #brush {
@@ -62,8 +58,8 @@ body {
 	position: relative;
 	height:10px;
 	top: 450px;
-	margin-left: auto ;
-  	margin-right: auto ;
+	margin-left: auto;
+  	margin-right: auto;
 }
 
 #bar {
@@ -71,4 +67,12 @@ body {
 	height:10px; 
 	width:50%; 
 	background-color: #075;
+}
+
+#loader {
+	z-index: 100;
+	position: absolute;
+	margin: auto;
+	top: 170px;
+	left: 460px;
 }
