--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -14,7 +14,6 @@ body {
 }
 
 #map-canvas {
-
 	height: 500px;
 	width: 750px;
 	margin-top: 0px;
@@ -89,10 +88,18 @@ ol{
 	background-color: #075;
 }
 
-#loader {
+#loading {
 	z-index: 100;
 	position: absolute;
+	background-color: #E9D9B3;
 	margin: auto;
-	top: 170px;
-	left: 460px;
+	height: 50px;
+	width: 150px;
+	top: 260px;
+	left: 630px;
+	border-style: solid;
+	border-width: 1px;
+	border-color: #444;
+	text-align: center;
+	font-family: sans-serif;
 }
