--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -89,14 +89,18 @@ ol{
 }
 
 #loading {
-	z-index: 100;
+	z-index: 999;
 	position: absolute;
 	background-color: #E9D9B3;
-	margin: auto;
 	height: 50px;
 	width: 150px;
+
 	top: 260px;
-	left: 630px;
+    left: 75px;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+
 	border-style: solid;
 	border-width: 1px;
 	border-color: #444;
