--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -3,35 +3,51 @@ body {
 	height: 100%; 
 	margin: 0; 
 	padding: 0; 
-	background-color: #FF0000;
+	background-color: #444;
 }
 #container {
-	width: 1000px;
+	width: 1100px;
 	margin-left: auto;
 	margin-right: auto;
-	background-color: #0F0;
+	background-color: #EEE;
 	height: 100%;
 }
 
 #map-canvas {
-
-	height: 400px;
-	width: 600px;
-	background-color: #0000FF;
-	margin-top: 0px;
+	height: 500px;
+	width: 700px;
+	
 	position: absolute;
 	z-index: 0;
-	top: 0px;
-	margin: 5px;
-	
+	top: 30px;
+	margin-left: 150px;
+	border-style: solid;
+	border-width: 1px;
+	border-color: #444;
 }
 
 #clearButton {
-	margin-top: 500px;
+	margin-top: 10px;
+	margin-bottom: 20px;
+	width: 120px;
+	height: 35px;
 	z-index: 100;
-	background-color: #0000FF;
-	
-	
+
+}
+
+
+ol{
+	position: relative;
+	top: 20px;
+	right: 25px;
+	margin-top: 0px;
+	list-style-type:none;
+}
+
+#timeline{
+	position: relative;
+	top: 305px;
+	left: 145px;
 }
 
 #brush {
@@ -51,7 +67,78 @@ body {
 	padding-right: 5px;
 }
 
-.axis text {
+.axis text, .axis label {
     font-family: sans-serif;
-    font-size: 12px;
+    font-size: 16px;
+}
+
+#progress-bar {
+	width:500px;
+	background-color: #333;
+	position: relative;
+	height:10px;
+	top: 450px;
+	margin-left: auto;
+  	margin-right: auto;
+}
+
+#bar {
+	position: relative; 
+	height:10px; 
+	width:50%; 
+	background-color: #075;
+}
+
+#infobox {
+	position: absolute;
+	top: 30px;
+	right: 0;
+	left: 804px;
+	margin-right: auto;
+	margin-left: auto;
+	width: 200px;
+	height: 500px;
+	
+	/*border-style: solid;
+	border-width: 1px;
+	border-color: #444;*/
+
+}
+
+#infobox ol{
+	position: absolute;
+	left: 20px;
+	top: 80px;
+	
+}
+
+#infobox li{
+	margin-top: 21px;
+	font-family: sans-serif;
+	font-size: 16px;
+}
+
+#infobox p{
+	position: absolute;
+	top: 30px;
+	left: 15px;
+
+}
+
+#loading {
+	z-index: 100;
+	position: absolute;
+	background-color: #E9D9B3;
+	height: 50px;
+	width: 150px;
+	top: 260px;
+	left: 37px;
+	right: 0;
+	margin-left: auto;
+	margin-right: auto;
+	border-style: solid;
+	border-width: 1px;
+	border-color: #444;
+	text-align: center;
+	font-family: sans-serif;
 }
