--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -6,7 +6,7 @@ body {
 	background-color: #444;
 }
 #container {
-	width: 1000px;
+	width: 1100px;
 	margin-left: auto;
 	margin-right: auto;
 	background-color: #EEE;
@@ -15,7 +15,7 @@ body {
 
 #map-canvas {
 	height: 500px;
-	width: 750px;
+	width: 700px;
 	
 	position: absolute;
 	z-index: 0;
@@ -89,6 +89,22 @@ ol{
 	background-color: #075;
 }
 
+#infobox {
+	position: absolute;
+	top: 30px;
+	right: 0;
+	left: 804px;
+	margin-right: auto;
+	margin-left: auto;
+	width: 200px;
+	height: 500px;
+	background-color: #91662D;
+	border-style: solid;
+	border-width: 1px;
+	border-color: #444;
+
+}
+
 #loading {
 	z-index: 100;
 	position: absolute;
@@ -96,7 +112,7 @@ ol{
 	height: 50px;
 	width: 150px;
 	top: 260px;
-	left: 75px;
+	left: 37px;
 	right: 0;
 	margin-left: auto;
 	margin-right: auto;
