--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -5,12 +5,16 @@ body {
 	padding: 0; 
 	background-color: #444;
 }
+
+
 #container {
 	width: 1100px;
 	margin-left: auto;
 	margin-right: auto;
+	margin-top: 0px;
 	background-color: #EEE;
 	height: 100%;
+	min-height:700px;
 }
 
 #map-canvas {
@@ -19,39 +23,48 @@ body {
 	
 	position: absolute;
 	z-index: 0;
-	top: 30px;
-	margin-left: 150px;
+	top: 50px;
+	margin-left: 170px;
 	border-style: solid;
 	border-width: 1px;
 	border-color: #444;
 }
 
-#clearButton {
-	margin-top: 10px;
-	margin-bottom: 20px;
+#button {
+	margin-top: 0px;
+	margin-bottom: 0px;
 	width: 120px;
 	height: 35px;
 	z-index: 100;
-
 }
 
 
-ol{
+#buttonList{
 	position: relative;
-	top: 20px;
-	right: 25px;
+	top: 35px;
+	right: 15px;
 	margin-top: 0px;
 	list-style-type:none;
 }
 
+#buttonList img{
+	margin-left: 43px;
+	height: 30px;
+	width: 30px;
+}
+
+#buttonList p{
+	margin-left: 25px;
+	font-family:"impact";
+}
+
 #timeline{
 	position: relative;
-	top: 305px;
+	top: 200px;
 	left: 145px;
 }
 
 #brush {
-	
 	margin-top: 500px;
 	background-color: #FF00FF;
 	margin-left: 100px;
@@ -72,32 +85,16 @@ ol{
     font-size: 16px;
 }
 
-#progress-bar {
-	width:500px;
-	background-color: #333;
-	position: relative;
-	height:10px;
-	top: 450px;
-	margin-left: auto;
-  	margin-right: auto;
-}
-
-#bar {
-	position: relative; 
-	height:10px; 
-	width:50%; 
-	background-color: #075;
-}
-
 #infobox {
 	position: absolute;
-	top: 30px;
+	top: 25px;
 	right: 0;
-	left: 804px;
+	left: 870px;
 	margin-right: auto;
 	margin-left: auto;
 	width: 200px;
 	height: 500px;
+	font-family: sans-serif;
 	
 	/*border-style: solid;
 	border-width: 1px;
@@ -107,22 +104,16 @@ ol{
 
 #infobox ol{
 	position: absolute;
-	left: 20px;
+	left: 55px;
 	top: 80px;
-	
+	list-style-type:none;
 }
 
 #infobox li{
 	margin-top: 21px;
 	font-family: sans-serif;
 	font-size: 16px;
-}
-
-#infobox p{
-	position: absolute;
-	top: 30px;
-	left: 15px;
-
+	list-style-type:none;
 }
 
 #loading {
@@ -143,4 +134,6 @@ ol{
 	border-color: #444;
 	text-align: center;
 	font-family: sans-serif;
+
+	visibility: hidden;
 }
