--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -3,16 +3,22 @@ body {
 	height: 100%; 
 	margin: 0; 
 	padding: 0; 
-	background-color: #444;
+	background-color: #BBB;
 }
 
+#header{
+	width: 100%;
+	height: 60px;
+	background-color: #666;
+	border-bottom: 1px solid #DDD;
+}
 
 #container {
 	width: 1100px;
 	margin-left: auto;
 	margin-right: auto;
 	margin-top: 0px;
-	background-color: #EEE;
+	/*background-color: #EEE;*/
 	height: 100%;
 	min-height:700px;
 }
@@ -23,11 +29,11 @@ body {
 	
 	position: absolute;
 	z-index: 0;
-	top: 50px;
+	top: 110px;
 	margin-left: 170px;
 	border-style: solid;
 	border-width: 1px;
-	border-color: #444;
+	border-color: #CCC;
 }
 
 #button {
@@ -59,12 +65,12 @@ body {
 }
 
 .checkboxes{
-	margin: 5px;
+	margin: 0px;
 }
 
 #timeline{
 	position: relative;
-	top: 200px;
+	top: 140px;
 	left: 145px;
 }
 
@@ -91,7 +97,7 @@ body {
 
 #infobox {
 	position: absolute;
-	top: 25px;
+	top: 110px;
 	right: 0;
 	left: 870px;
 	margin-right: auto;
@@ -99,6 +105,8 @@ body {
 	width: 200px;
 	height: 500px;
 	font-family: sans-serif;
+	padding: 5px;
+	border-top: 1px solid #CCC;
 	
 	/*border-style: solid;
 	border-width: 1px;
