--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -12,6 +12,15 @@ body {
 	background-color: #666;
 	border-bottom: 1px solid #DDD;
 }
+#header h2{
+	margin:0px;
+	text-align: center;
+	position: relative;
+	top: 15px;
+}
+#header a{
+	color: #FFF;
+}
 
 #container {
 	width: 1100px;
@@ -65,6 +74,9 @@ body {
 }
 
 .checkboxes{
+
+}
+.checkboxes2{
 
 }
 
