--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -65,7 +65,9 @@ body {
 }
 
 .checkboxes{
-
+	height: 20px;
+	margin-top: auto;
+	margin-bottom: auto;
 }
 
 #timeline{
@@ -103,15 +105,16 @@ body {
 	margin-right: auto;
 	margin-left: auto;
 	width: 200px;
-	height: 500px;
-	font-family: sans-serif;
+	height: 490px;
 	padding: 5px;
 	border-top: 1px solid #CCC;
-	
-	/*border-style: solid;
-	border-width: 1px;
-	border-color: #444;*/
+	background-color: #DDD;
+}
 
+#infobox p{
+	font-size: 15px;
+	font-family: sans-serif;
+	margin-top: 0px;
 }
 
 #infobox ol{
@@ -123,30 +126,21 @@ body {
 
 #infobox li{
 	margin-top: 21px;
-	font-family: sans-serif;
 	font-size: 16px;
 	list-style-type:none;
 }
 
-/*#infobox td{
-	height: 25px;
-}*/
-#infobox table, tr, td{
-	margin: 0px;
-	padding: 0px;
-	font-size: 12px;
-	height: 25px;
-	overflow: hidden;
-}
 #infobox table{
 	border-collapse: collapse;
+	width: 200px;
+
 }
 #infobox td{
-	padding-right: 3px;
-	height: 36px;
+	padding-right: 5px;
 }
 #infobox tr{
-	line-height: 12px;
+	height: 45px;
+	margin-top: 10px;
 }
 
 #loading {
