--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -12,14 +12,16 @@ body {
 	background-color: #666;
 	border-bottom: 1px solid #DDD;
 }
-#header h2{
-	margin:0px;
+#header a{
+	display: block;
 	text-align: center;
 	position: relative;
 	top: 15px;
-}
-#header a{
-	color: #FFF;
+	text-decoration: none;
+	font-size: 20px;
+	font-family: sans-serif;
+	font-weight: bold;
+	color: #EEE;
 }
 
 #container {
@@ -109,6 +111,23 @@ body {
     font-size: 16px;
 }
 
+#title{
+	
+	width: 100%;
+	background-color: #888;
+
+	margin: 0px;
+	display: block;
+	text-align: center;
+	position: relative;
+	text-decoration: none;
+	font-size: 18px;
+	font-family: sans-serif;
+	color: #EEE;
+	padding-top: 5px;
+	padding-bottom: 5px;
+}
+
 #infobox {
 	position: absolute;
 	top: 110px;
@@ -116,17 +135,15 @@ body {
 	left: 870px;
 	margin-right: auto;
 	margin-left: auto;
-	width: 200px;
-	height: 490px;
-	padding: 5px;
-	border-top: 1px solid #CCC;
+	width: 210px;
+	height: 500px;
 	background-color: #DDD;
 }
 
 #infobox p{
 	font-size: 15px;
 	font-family: sans-serif;
-	margin-top: 0px;
+	margin: 5px;
 }
 
 #infobox ol{
@@ -162,8 +179,8 @@ body {
 	height: 50px;
 	width: 150px;
 
-	top: 260px;
-	left: 37px;
+	top: 340px;
+	
 	right: 0;
 	margin-left: auto;
 	margin-right: auto;
