--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -69,8 +69,9 @@ body {
 }
 
 #buttonList p{
-	margin-left: 25px;
-	font-family:"impact";
+	margin-left: 10px;
+	font-family:"tahoma";
+	font-weight: bold;
 }
 
 .checkboxes{
@@ -153,6 +154,17 @@ body {
 #infobox tr{
 	height: 45px;
 	margin-top: 10px;
+}
+#checkboxesDiv tr{
+	height: 30px;
+}
+#checkboxesDiv table{
+	width: 120px;
+}
+#checkboxDiv{
+	height: 15px;
+	font-family: sans-serif; 
+	font-size: 13px;
 }
 
 #loading {
